# detect-emptylots

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: data_check.ipynb  main.ipynb
src/: convert_to_json.py  data_check.py  dataset.py  infer.py  model.py  train.py  utils.py
src/data/: dataset.py
src/models/: detector.py
