[project]
name = "detect-emptylots"
version = "0.1.0"
description = "空き地検出システム"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "albumentations>=1.3.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0"
]
