[project]
name = "detect-emptylots"
version = "0.1.0"
description = "空き地セグメンテーション"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.23.0",
    "opencv-python>=4.7.0",
    "rasterio>=1.3.0",
    "albumentations>=1.3.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.2.0",
    "jupyter>=1.0.0"
]

[tool.setuptools]
packages = ["src"]
